# ConBox

./: CMakeLists.txt  main.cpp
base/: cnum.cpp  cnum.h  computable.h  definitions.h  func_d_dgl.cpp  func_d_dgl.h  func_dgl.cpp  func_dgl.h  function.cpp  function.h  function_d.cpp  function_d.h  function_d_data.cpp  function_d_data.h  function_data.cpp  function_data.h  matrix.cpp  matrix.h  polynom.cpp  polynom.h  transfer_function.cpp  transfer_function.h  vec.cpp  vec.h
controller/: controller.h  dimensions.h  dof2_pid_controller.h  multi_controller.cpp  multi_controller.h  pid_controller.cpp  pid_controller.h  prefilter.cpp  prefilter.h  state_controller.cpp  state_controller.h  state_integral_controller.cpp  state_integral_controller.h  stationary_filter.cpp  stationary_filter.h
dgl_numeric/: dgl_euler.cpp  dgl_euler.h  dgl_rungekutta.cpp  dgl_rungekutta.h  dgl_solver.cpp  dgl_solver.h  difference_eq_solver.cpp  difference_eq_solver.h
disturbance/: disturbance.cpp  disturbance.h  disturbance_const.cpp  disturbance_const.h  disturbance_white.cpp  disturbance_white.h
example/: coupled_spring_oscillator.cpp  coupled_spring_oscillator.h  harm_osc.cpp  harm_osc.h  inverted_pend_lin.cpp  inverted_pend_lin.h  pendel_wagen_lin.cpp  pendel_wagen_lin.h
gui/: visualizer.cpp  visualizer.h  visualizer_window.cpp  visualizer_window.h  window.cpp  window.h
identification/: det_least_squares.cpp  det_least_squares.h  stoch_least_squares.cpp  stoch_least_squares.h
linear_system/: linear_system.cpp  linear_system.h  linear_system_d.cpp  linear_system_d.h
observer/: kalman_filter.cpp  kalman_filter.h  kalman_filter_ext.cpp  kalman_filter_ext.h  kalman_filter_unsc.cpp  kalman_filter_unsc.h  luenberger_observer.cpp  luenberger_observer.h  observer.h
simulator/: simulator.cpp  simulator.h  simulator_2dof.cpp  simulator_2dof.h  simulator_obs.cpp  simulator_obs.h  simulator_prefilter.cpp  simulator_prefilter.h
test/: test_cnum.cpp  test_cnum.h  test_controller.cpp  test_controller.h  test_det_least_squares.cpp  test_det_least_squares.h  test_dgl_solver.cpp  test_dgl_solver.h  test_disturbance.cpp  test_disturbance.h  test_function.cpp  test_function.h  test_gui.cpp  test_gui.h  test_kalman_filter.cpp  test_kalman_filter.h  test_linear_system.cpp  test_linear_system.h  test_linear_system_d.cpp  test_linear_system_d.h  test_matrix.cpp  test_matrix.h  test_numeric.cpp  test_numeric.h  test_observer.cpp  test_observer.h  test_simulator.cpp  test_simulator.h
